[tool.poetry]
name = "sales"
version = "0.1.0"
description = ""
authors = ["Héctor Alonso Lozada Echezuría <hlozada@corporacionmastergroup.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.0"
SQLAlchemy = "^1.4.15"
alembic = "^1.6.2"
click = "^8.0.0"

[tool.poetry.dev-dependencies]
tox = "^3.23.1"
pytest = "^6.2.4"
coverage = "^5.5"
flake8 = "^3.9.2"
black = "^21.5b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
